--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="kartu-foto profil">
-      <img src="foto.png" alt="foto">
+      <img src="fotoikaa.jpeg" alt="foto">
       <h1>Ika</h1>
       <p>Siswa SMKN TAMBAKBOYO,Selamat datang diwebsite pertama ku!</p>
       <a href="https://www.instragram.com/myusername">jangan lupa mampir di instragram saya ya</a>
