--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
   <head>
-    <title>Profil saya - Ika</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profil Saya - Kusnul Khotimah</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="kartu-foto profil">
-      <img src="fotoikaa.jpeg" alt="foto">
-      <h1>Ika</h1>
-      <p>Siswa SMKN TAMBAKBOYO,Selamat datang diwebsite pertama ku!</p>
-      <a href="https://www.instragram.com/myusername">jangan lupa mampir di instragram saya ya</a>
-      <button id="sapaButton">Sapa Saya!</button>
-    </div>
+<div class="kartu-pp">
+  <img src="foto.jpeg" alt="Foto Kusnul Khotimah">
+  <h1>Kusnul Khotimah</h1>
+  <p>Siswa SMKN Tambakboyo. Selamat datang di website pertamaku!</p>
+  <a href="https://www.instagram.com/myusername" target="_blank">
+    Jangan lupa mampir di Instagram saya
+  </a>
+  <br><br>
+  <button id="sapaButton">Sapa Saya</button>
+</div>
+
+
     <script src="script.js"></script>
   </body>
 </html>
