--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Saya - Kusnul Khotimah</title>
+    <title>Profil Saya - Mar'atus Sholihah</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <div class="kartu-pp">
-  <img src="foto.jpeg" alt="Foto Kusnul Khotimah">
-  <h1>Kusnul Khotimah</h1>
+  <img src="fotoikaa.jpeg" alt="Foto Mar'atus sholihah">
+  <h1>Mar'atus sholihah</h1>
   <p>Siswa SMKN Tambakboyo. Selamat datang di website pertamaku!</p>
   <a href="https://www.instagram.com/myusername" target="_blank">
     Jangan lupa mampir di Instagram saya
